# speller_api

./: .env.example  .gitignore  ACCURACY.md  DESIGN_NOTES.md  INTEGRATION.md  KEY_SETUP.md  LATENCY.md  README.md  list_models.py  pyproject.toml  requirements.txt
task5_speller_api/: __init__.py  __main__.py  _client.py  speller.py
tests/: test_cases.json  test_speller.py
